--- a/src/style.css
+++ b/src/style.css
@@ -292,6 +292,43 @@ header nav ul li a {
   }
 }
 
+/* Animaciones */
+
+.flip-box {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  perspective: 1000px; 
+}
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: auto;
+  height:auto;
+  backface-visibility: hidden;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 60%;
+}
+
+.flip-box-back {
+  background-color: black;
+  color: white;
+  transform: rotateY(180deg);
+   
+}
+
 #eventos {
   background-color: black;
   background-repeat: no-repeat;
