--- a/src/style.css
+++ b/src/style.css
@@ -179,6 +179,43 @@ header nav ul li a {
   }
 }
 
+/* Animacion */
+.animacion-home{
+  /* margin-top: 25px;
+  font-size: 21px;
+  text-align: center; */
+
+  -webkit-animation: fadein 4s;
+  -moz-animation: fadein 4s; 
+       
+  -o-animation: fadein 4s;
+  animation: fadein 4s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
 .grid-container-reviews {
   display: grid;
   grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
