--- a/src/style.css
+++ b/src/style.css
@@ -4,284 +4,131 @@
   padding: 0;
 }
 
-html,
-body {
-  overflow-x: hidden;
-}
-
-.container-elementos {
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-/* No estoy encontrando como solucionar bien la incompatibilidad de sticky y overflow. */
-
 header nav div a img {
-  max-height: 5em;
-  float: left;
-  margin-left: 2em;
+  max-height: 7rem;
+  margin-left: 1em;
 }
 
-header {
-  background: linear-gradient(to bottom, #020202, #121012);
-  width: auto;
-  position: sticky;
-  top: 0;
-  z-index: 10;
+.bg-nav {
+  background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.828));
 }
 
-header nav {
-  display: grid;
-  justify-content: space-between;
-  align-items: center;
-  grid-auto-flow: column;
-}
-
-header nav ul li {
-  font-size: 20px;
-  text-align: justify;
-  list-style: none;
-}
-
-header nav ul li a {
-  text-decoration: none;
-  color: #e1e2ef;
-  padding: 1.3em 2em;
-}
-.menu li a:hover {
+.nav-item :hover {
   color: #f4f8fa;
   background: #857f7f9a;
   font-weight: bold;
 }
-.grid-list {
-  display: grid;
-  grid-auto-flow: column;
-  list-style-type: none;
-  column-gap: 1%;
-  padding: 0;
-}
-.grid-list-item {
-  width: min-content;
-  white-space: nowrap;
-}
-.desplegable {
-  display: none;
-}
 
-@media screen and (max-width: 800px) {
-  .grid-list {
-    grid-auto-flow: row;
-  }
-  header nav ul li a {
-    padding: 0.3em;
-  }
-  header nav {
-    justify-content: space-around;
-  }
-  .desplegable {
-    display: inline-block;
-    background-color: #364a43;
-    color: white;
-    padding: 16px;
-    font-size: 1em;
-    border: none;
-  }
-  
-  
-  .abrir {
-    position: absolute;
-    display: inline-block;
-    margin-left: 5%;
-  }
-  .menu-bar {
-    display: none;
-    position: absolute;
-    background-color: #0e0e0e;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-  .menu-bar ul li a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  .menu-bar ul li a:hover {
-    background-color: rgb(59, 52, 52);
-  }
-  .abrir:hover .menu-bar {
-    display: block;
-  }
-  .abrir:hover .desplegable {
-    background-color: #3e8e41;
-  }
-}
 #homePage {
-  background-color: rgb(0, 0, 0);
+  background-image: url("./assets/img/background-home-grande.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
   min-height: 100vh;
-}
-
-.grid-container-home {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.3fr 0.5fr;
+  background-color: black;
 }
 
 .titulo {
-  grid-column-start: 3;
-  grid-column-end: 4;
   text-align: center;
-  font-size: 4vh;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  font-size: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   color: white;
 }
-
 .parrafo-home {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 3;
-  grid-column-end: 5;
   background-color: rgba(143, 150, 189, 0.6);
   padding: 15px 15px 15px 15px;
   color: rgb(233 233 233);
-  font-size: 1.5em;
+  font-size: 1.3rem;
   font-style: italic;
   font-weight: lighter;
   font-variant: small-caps;
   line-height: 2;
+  margin-top: 8%;
+  margin-left: 40%;
 }
 
-@media only screen and (max-width: 1920px) {
-  .grid-container-home {
-    background-image: url("./assets/img/background-home-grande.jpg");
-  }
+@media screen and (max-width: 992px){
+.parrafo-home{
+  margin-left:auto;
 }
-@media only screen and (max-width: 800px) {
-  .grid-container-home {
-    background-image: url("./assets/img/background-home-mediano.jpg");
-  }
-}
-@media only screen and (max-width: 468px) {
-  .grid-container-home {
-    background-image: url("./assets/img/background-home-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5%;
-  }
 }
 
-/* Animacion */
-.animacion-home{
-  /* margin-top: 25px;
-  font-size: 21px;
-  text-align: center; */
-
+.animacion-home {
+ 
   -webkit-animation: fadein 4s;
-  -moz-animation: fadein 4s; 
-       
+  -moz-animation: fadein 4s;
+
   -o-animation: fadein 4s;
   animation: fadein 4s;
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-.grid-container-reviews {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 0.3fr 1.35fr 1.35fr 0.3fr;
-}
-
-.grid-item1 {
-  grid-row-start: 2;
-  grid-column-start: 2;
-}
-.grid-item2 {
-  grid-row-start: 2;
-  grid-column-start: 4;
-}
-.grid-item3 {
-  grid-row-start: 3;
-  grid-column-start: 2;
-}
-.grid-item4 {
-  grid-row-start: 3;
-  grid-column-start: 4;
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 #reviews {
-  background-color: black;
+  background-image: url("./assets/img/background-reviews-grande.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
   min-height: 100vh;
+  background-color: black;
 }
-
 .container-video {
   margin-bottom: 3%;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 .container-video iframe {
-  max-width: 100%;
-  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  padding-bottom: 5%;
 }
-@media only screen and (max-width: 1920px) {
-  .grid-container-reviews {
-    background-image: url("./assets/img/background-reviews-grande.jpg");
-  }
-}
-@media only screen and (max-width: 800px) {
-  .grid-container-reviews {
-    background-image: url("./assets/img/background-reviews-mediano.jpg");
-  }
-}
-@media only screen and (max-width: 468px) {
-  .grid-container-reviews {
-    background-image: url("./assets/img/background-reviews-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-}
-
-/* Animaciones */
-
-.animacion-review-left{
+.animacion-review-left {
   animation: myAnimL 3s ease-in 0s 1 normal forwards;
 }
-
 
 @keyframes myAnimL {
   0% {
@@ -294,7 +141,7 @@ header nav ul li a {
     transform: translateX(0);
   }
 }
-.animacion-review-right{
+.animacion-review-right {
   animation: myAnimR 3s ease-in 0s 1 normal forwards;
 }
 @keyframes myAnimR {
@@ -310,65 +157,29 @@ header nav ul li a {
 }
 
 #productos {
-  background-color: Rgb(143, 150, 189);
-  min-height: 100vh;
+  background-image: url("./assets/img/background-productos-grande.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  min-height: 100vh;
+  background-color: black;
 }
-
-.grid-container-productos {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 0.3fr 1.35fr 0.3fr;
-}
-.grid-producto1 {
-  grid-row-start: 2;
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-.grid-producto2 {
-  grid-row-start: 2;
-  grid-column-start: 4;
-  grid-column-end: 5;
-}
-
-.container-producto-home {
-  margin-top: 5%;
-}
-.container-producto-home a img {
-  max-width: 100%;
-  max-height: 100%;
+.container-producto {
+  margin-bottom: 3%;
+  position: relative;
   width: 100%;
-  height: auto;
-}
-@media only screen and (max-width: 1920px) {
-  .grid-container-productos {
-    background-image: url("./assets/img/background-productos-grande.jpg");
-  }
-}
-@media only screen and (max-width: 800px) {
-  .grid-container-productos {
-    background-image: url("./assets/img/background-productos-mediano.jpg");
-  }
-}
-@media only screen and (max-width: 468px) {
-  .grid-container-productos {
-    background-image: url("./assets/img/background-productos-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5%;
-  }
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 /* Animaciones */
 
 .flip-box {
-  background-color: transparent;
+  background-color: black;
   width: 100%;
   height: 100%;
-  perspective: 1000px; 
+  perspective: 1000px;
 }
 .flip-box-inner {
   position: relative;
@@ -381,10 +192,11 @@ header nav ul li a {
 .flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
-.flip-box-front, .flip-box-back {
+.flip-box-front,
+.flip-box-back {
   position: absolute;
   width: auto;
-  height:auto;
+  height: auto;
   backface-visibility: hidden;
   max-width: 100%;
   max-height: 100%;
@@ -393,310 +205,61 @@ header nav ul li a {
 }
 
 .flip-box-back {
+  /* background-color: rgba(143, 150, 189, 0.6); */
   background-color: black;
   color: white;
   transform: rotateY(180deg);
-   
 }
 
 #eventos {
-  background-color: black;
+  background-image: url("./assets/img/background-eventos-grande.jpg");  
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  min-height: 100vh;
+  background-color: black;
 }
 
-.grid-eventos {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 0.3fr 1.35fr 0.3fr 1.35fr 0.3fr;
-}
 
-.carrousel-eventos {
-  grid-row-start: 2;
-  grid-row-end: 4;
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.carrousel-eventos img {
-  min-width: 100%;
-  min-height: 100%;
-  width: 100%;
-  height: auto;
-}
-
-.parrafo-eventos {
-  grid-row-start: 3;
-  grid-row-end: 5;
-  grid-column-start: 3;
-  grid-column-end: 5;
-
+.parrafo-eventos{
   background-color: rgba(143, 150, 189, 0.9);
-
-  padding-left: 3%;
-
-  padding-right: 3%;
-
-  color: rgb(233 233 233);
-  font-size: 1.5em;
+  padding: 15px 15px 15px 15px;
+  color: rgb(233, 233, 233);
+  font-size: 1.3rem;
   font-style: italic;
   font-weight: lighter;
   font-variant: small-caps;
   line-height: 2;
+  margin-top: -30%;
+  margin-left: 55%;
+  margin-bottom: 5%;
 }
-@media only screen and (max-width: 1920px) {
-  .grid-eventos {
-    background-image: url("./assets/img/background-eventos-grande.jpg");
+@media screen and (max-width: 992px){
+  .parrafo-eventos{
+    margin-left: auto;
+    margin-top: 0;
   }
-}
-@media only screen and (max-width: 800px) {
-  .grid-eventos {
-    background-image: url("./assets/img/background-eventos-mediano.jpg");
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5%;
-    justify-content: center;
+  #carouselSlidesOnly{
+    display:none;
+
   }
-}
-@media only screen and (max-width: 468px) {
-  .grid-eventos {
-    background-image: url("./assets/img/background-eventos-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 15px;
   }
-  .carrousel-eventos {
-    display: none;
+  h3 {
+    text-align: center;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    color: #010303;
   }
-}
-
-h3 {
-  text-align: center;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-  color: #010303;
-}
-
-h4 {
-  color: rgb(233 233 233);
-  padding-bottom: 0.5em;
-}
-
-.grid-footer {
-  background-color: rgb(77, 68, 73);
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 1fr;
-  font-size: 1em;
-  color: white;
-}
-
-.redes-sociales {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.redes-sociales ul li {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  color: #e1e2ef;
-}
-.redes-sociales nav ul li a {
-  text-decoration: none;
-  color: #e1e2ef;
-}
-
-.container-pago {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-.icono-pago {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 20px;
-}
-
-.datos-contacto {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-}
-
-@media only screen and (max-width: 468px) {
-  .grid-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 5%;
+  
+  h4 {
+    color: rgb(233 233 233);
+    padding-bottom: 0.5em;
   }
-  .datos-contacto {
-    margin: 0;
-  }
-}
-/* html contacto */
 
-#pagina-contacto {
-  background-image: url("../src/assets/img/background-home.jpg");
-  background-position: center center;
-  background-attachment: fixed;
-  background-color: Rgb(143, 150, 189);
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.container-contacto {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 0.3fr 1.35fr 0.3fr;
-}
-.container-form {
-  grid-row-start: 2;
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-.container-map {
-  grid-row-start: 2;
-  grid-column-start: 4;
-  grid-column-end: 5;
-}
-
-.map,
-.formulario {
-  margin-top: 5%;
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: 100%;
-}
-
-@media only screen and (max-width: 468px) {
-  .container-contacto {
-    background-image: url("./assets/img/background-home-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5%;
-  }
-}
-
-/* productos */
-
-#pagina-productos {
-  background-image: url("./assets/img/background-reviews-grande.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  height: auto;
-}
-
-.grid-container-tonica {
-  display: grid;
-  grid-template-columns: 0.5fr 1.5fr 1fr 1.5fr 0.5fr;
-  grid-template-rows: 0.3fr 1.35fr 1.35fr 0.3fr;
-}
-
-.container-productos {
-  display: flex;
-  justify-content: space-evenly;
-}
-.img-producto {
-  width: 100%;
-  display: block;
-}
-.img-container {
-  width: 20vw;
-  margin: 0 auto;
-}
-
-.contenido-producto {
-  background-color: grey;
-  padding: 3rem 0.5rem 2rem 0.5rem;
-  cursor: pointer;
-}
-.img-container {
-  background-color: white;
-  padding: 3rem 0.5rem 2rem 0.5rem;
-  cursor: pointer;
-}
-.img-producto {
-  background-color: yellow;
-  box-shadow: 0 0 20px 10px rgb(77, 68, 73);
-  border-radius: 50%;
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: 100%;
-}
-.boton-producto {
-  display: flex;
-  justify-content: center;
-  margin-top: 1.4rem;
-  opacity: 1;
-}
-.boton-cart,
-.boton-comprar {
-  background: transparent border 1px solid black;
-  padding: 0.8rem 0;
-  width: 125px;
-  font-family: inherit;
-  text-transform: uppercase;
-  cursor: pointer;
-  border: none;
-}
-.boton-cart {
-  background-color: black;
-  color: white;
-}
-.boton-cart :hover {
-  background: yellowgreen;
-}
-.boton-comprar :hover {
-  background: violet;
-  color: white;
-}
-.producto-info {
-  background: turquoise;
-  padding: 2rem;
-}
-.producto-info-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.producto-nombre {
-  color: black;
-  display: block;
-  text-decoration: none;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-.producto-precio {
-  padding-top: 0.6rem;
-  padding-right: 0.6rem;
-  display: inline-block;
-}
-@media only screen and (max-width: 468px) {
-  .grid-container-tonica {
-    background-image: url("./assets/img/background-reviews-pequeño.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-}
+    footer {
+      background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.828));  
+              
+      font-size: 1rem;
+      color: white;
+    }
