Agregado gitignore y SASS

--- a/src/views/tonicas.html
+++ b/src/views/tonicas.html
@@ -16,7 +16,7 @@
 
     <!-- CSS -->
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -32,10 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse show" id="navbarDark">
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-light" type="submit">Search</button>
-                    </form>
+                   
                     <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
@@ -200,7 +197,7 @@
                     </nav>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="medios-pago">
+                    <nav class="medios-pago">
                         <!-- Medios de pago -->
 
                         <h4>Medios de pago</h4>
@@ -213,10 +210,10 @@
                             <img class="icono-pago" src="../assets/img/amex.png" alt="American Express" width="30">
 
                         </div>
-                    </div>
+                    </nav>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="datos-contacto">
+                    <nav class="datos-contacto">
                         <!-- direccion y horario -->
 
                         <p> Balcarce 50, Ciudad Autónoma de Buenos Aires</p>
@@ -225,7 +222,7 @@
                         <p> L- V 9:00 - 20:00 hs.</p>
                         <p>Sab 10:00 -20:00 hs.</p>
 
-                    </div>
+                    </nav>
                 </div>
             </div>
         </div>
