Agregado SEO y favicon

--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -6,12 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description"
+        content="Comprá productos de GinHouse por internet. Contactanos si buscas un gin o tónica para importar o agregar al catálogo más grande de Argentina.">
 
+    <!-- Open graph -->
+    <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
+    <meta property="og:description" content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
+    <meta property="og:image" content="url a insertar">
+    <!-- cuando la suba será completada la url -->
 
+    <!-- Fuente -->
     <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Fuente -->
+
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -23,7 +31,11 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Contacto</title>
+
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="../../src/assets/img/favicon.ico" type="image/x-icon">
+    <title>Contacto - Tienda Online Ginhouse </title>
 </head>
 
 <body>
@@ -38,7 +50,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse show" id="navbarDark">
-                    
+
                     <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
@@ -82,20 +94,20 @@
                     </div>
                     <div class="col-auto">
                         <button type="submit" class="btn btn-primary mb-3">Enviar</button>
-                      </div>
-    
+                    </div>
+
                 </div>
 
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    
-                        <iframe class="map"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8401827045!2d-58.37249508477018!3d-34.608202580458354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352c95f0d4f5%3A0xee8dc0a5eb259e82!2sBalcarce%2050%2C%20C1064%20CABA!5e0!3m2!1ses-419!2sar!4v1639498491878!5m2!1ses-419!2sar"
-                            style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    
+
+                    <iframe class="map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8401827045!2d-58.37249508477018!3d-34.608202580458354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352c95f0d4f5%3A0xee8dc0a5eb259e82!2sBalcarce%2050%2C%20C1064%20CABA!5e0!3m2!1ses-419!2sar!4v1639498491878!5m2!1ses-419!2sar"
+                        style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
                 </div>
             </div>
         </div>
-       
+
 
     </section>
 
