--- a/src/views/tonicas.html
+++ b/src/views/tonicas.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Comprá productos de GinHouse por internet. Tenemos la mayor variedad de Aguas y gaseosas tónicas nacionales e importadas para que armes tus gin tonic. Hacé tu pedido y pagalo online.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
+
+    <!-- Open graph -->
+    <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
+    <meta property="og:description" content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
+    <meta property="og:image" content="url a insertar"> 
+    <!-- cuando la suba será completada la url -->
+     
     <!-- Fuente -->
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,6 +29,11 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="../../css/style.css">
+   
+    <!-- Favicon -->
+
+    <link rel="shortcut icon" href="../../src/assets/img/favicon.ico" type="image/x-icon">
+    <title>Aguas Tónicas - Tienda Online Ginhouse </title>
 </head>
 
 <body>
