--- a/scss/base/_backgrounds.scss
+++ b/scss/base/_backgrounds.scss
@@ -1,23 +1,20 @@
 #homePage {
-    background-image: url("../src/assets/img/background-home-grande.jpg");
+    background-image: url("../../src/assets/img/back5.jpg");
     @extend %background-section;
 }
 
 #reviews {
-    background-image: url("../src/assets/img/background-reviews-grande.jpg");
+    background-image: url("../../src/assets/img/back6.jpg");
     @extend %background-section;
 }
 
 #productos {
-    background-image: url("../src/assets/img/background-productos-grande.jpg");
+    background-image: url("../../src/assets/img/background-reviews-grande.jpg");
     @extend %background-section;
 }
-#eventos {
-    background-image: url("../src/assets/img/background-eventos-grande.jpg");
-    @extend %background-section;
-}
+
 #pagina-contacto {
-    background-image: url("../src/assets/img/background-home-grande.jpg");
+    background-image: url("../../src/assets/img/back5.jpg");
     @extend %background-section;
 }
 #pagina-productos {
