--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,8 +8,8 @@
 @import './base/animations.scss';
 @import './base/texts';
 @import './components/mediaQuery';
-@import './components/mixins';
 @import './components/extends';
+@import './base/modal';
 
 
 
