--- a/src/views/gins.html
+++ b/src/views/gins.html
@@ -44,7 +44,7 @@
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="GinHouse" width="50%"></a>
+                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="GinHouse" width="50%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark"
                     aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -61,10 +61,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../../index.html#productos">Productos</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../../index.html#eventos">Eventos y Catas</a>
-                        </li>
-                        <li class="nav-item">
+                       <li class="nav-item">
                             <a class="nav-link" href="../views/contact.html">Contacto</a>
                         </li>
 
@@ -156,69 +153,48 @@
 
     </section>
 
-    <!-- Footer -->
+  <!-- footer  -->
 
-    <footer>
+  <footer>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-8 col-lg-8">
 
-                    <nav class="redes-sociales">
-                        <!-- Iconos con links de rrss y contacto -->
-                        <h4>Nuestros medios de contacto</h4>
-                        <ul>
-                            <li class="icono"><a href="https://www.instagram.com/" target="_blank"><img
-                                        src="../assets/img/instagram.png" alt="Instagram" width="25"></a>@GinHouse
-                            </li>
-                            <li class="icono"><a href="https://facebook.com" target="_blank"> <img
-                                        src="../assets/img/facebook.png" alt="Facebook" width="25"></a>
-                                facebook.com/GinHouse
-                            </li>
-                            <li class="icono"><a href="mailto:ginhouse@ginhouse.com"><img src="../assets/img/gmail.png"
-                                        alt="Mail" width="25"></a>
-                                ginhouse@ginhouse.com</li>
-                            <li class="icono"><img src="../assets/img/telephone-call.png" alt="Numero de telefono"
-                                    width="25">4444-5555/2222</li>
-                        </ul>
+                <nav class="redes-sociales">
+                    <!-- Iconos con links de rrss y contacto -->
+                    <h4>Nuestros medios de contacto</h4>
+                    <ul class="social-networks round to-diamond">
 
-                    </nav>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <nav class="medios-pago">
-                        <!-- Medios de pago -->
+                        <li><a href="https://twitter.com/" class="icon-twitter">Twitter</a></li>
+                        <li><a href="https://www.facebook.com/" class="icon-facebook">Facebook</a></li>
+                        <li><a href="https://instagram.com" class="icon-instagram">Instagram</a></li>
+                        <li><a href="" class="icon-whatsapp">WhatsApp</a></li>
 
-                        <h4>Medios de pago</h4>
+                    </ul>
 
-                        <div class="container-pago">
-                            <img class="icono-pago" src="../assets/img/visa.png" alt="Visa" width="30">
-                            <img class="icono-pago" src="../assets/img/transferencia-bancaria.png"
-                                alt="Transferencia Bancaria" alt="Transferencia Bancaria" width="30">
-                            <img class="icono-pago" src="../assets/img/mercado-pago.png" width="30">
-                            <img class="icono-pago" src="../assets/img/amex.png" alt="American Express" width="30">
+                </nav>
+            </div>
+            
+            
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <nav class="datos-contacto">
+                    <!-- direccion y horario -->
 
-                        </div>
-                    </nav>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <nav class="datos-contacto">
-                        <!-- direccion y horario -->
+                    <p> Balcarce 50, Ciudad Autónoma de Buenos Aires</p>
+                    <p> CP 1222</p>
+                    <p>Horario de atención:</p>
+                    <p> L- V 9:00 - 20:00 hs.</p>
+                    <p>Sab 10:00 -20:00 hs.</p>
 
-                        <p> Balcarce 50, Ciudad Autónoma de Buenos Aires</p>
-                        <p> CP 1222</p>
-                        <p>Horario de atención:</p>
-                        <p> L- V 9:00 - 20:00 hs.</p>
-                        <p>Sab 10:00 -20:00 hs.</p>
 
-                    </nav>
-                </div>
+                </nav>
             </div>
         </div>
+    </div>
 
+</footer>
 
-
-    </footer>
-    <!--Fin Footer -->
 
 
 
