--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -85,7 +85,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  
+
   figure {
     position: relative;
     height: 100%;
@@ -93,7 +93,7 @@
     overflow: hidden;
     border-radius: 6px;
     box-shadow: -1rem 0 3rem #000;
-   
+
     cursor: pointer;
     img {
       width: 100%;
@@ -117,7 +117,7 @@
         transition: all 500ms ease-out;
         margin-top: 2rem;
       }
-      p{
+      p {
         font-size: 1rem;
         line-height: 1.5;
         width: 100%;
@@ -130,11 +130,140 @@
       visibility: visible;
     }
     &:hover > .capa h2 {
-      margin-top: 5rem;
+      margin-top: 2rem;
       margin-bottom: 2rem;
     }
-    &:hover > img{
+    &:hover > img {
       transform: scale(1.3);
     }
+  }
+}
+//Animacion rrss
+
+@font-face {
+  font-family: "icomoon";
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2");
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?#iefix3qkin2")
+      format("embedded-opentype"),
+    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.woff?3qkin2")
+      format("woff"),
+    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.ttf?3qkin2")
+      format("truetype"),
+    url("fhttps://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.svg?3qkin2#icomoon")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.social-networks {
+  margin: 0 0 35px;
+  padding: 0;
+  font-size: 0;
+  text-align:justify;
+
+  li {
+    display: inline-block;
+  }
+
+  a {
+    display: block;
+    position: relative;
+    margin: 0 7px;
+    width: 68px;
+    height: 68px;
+    font-size: 0;
+    line-height: 0;
+    text-align: center;
+    text-decoration: none;
+    transition: all 400ms ease;
+
+    &:before {
+      content: "";
+      position: absolute;
+      display: inline-block;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      margin-top: -50%;
+      margin-left: -50%;
+      background-color: #1f2027;
+      transition: all 400ms ease;
+    }
+
+    &:after {
+      position: relative;
+      display: block;
+      font-family: "icomoon";
+      speak: none;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1;
+      color: #fff;
+      font-size: 26px;
+      line-height: 66px;
+    }
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+
+    &:hover:before {
+      transition: all 400ms;
+    }
+  }
+
+  &.round a:before {
+    border-radius: 100px;
+  }
+
+  &.to-diamond a:hover:before,
+  &.to-diamond a:focus:before {
+    border-radius: 0;
+    transform: rotate(-45deg);
+  }
+
+  $networks: facebook "\e603"rgb(143, 150, 189),
+    twitter "\e618"rgb(143, 150, 189), instagram "\e604"rgb(143, 150, 189), whatsapp "\ea93" rgb(143, 150, 189);
+
+  @each $network in $networks {
+    .icon-#{nth($network, 1)} {
+      &:after {
+        content: "#{nth($network, 2)}";
+      }
+
+      &:hover:before,
+      &:focus:before {
+        background: nth($network, 3);
+      }
+    }
+  }
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  53%,
+  80%,
+  100% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40% {
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -6px, 0);
+  }
+
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -4px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -2px, 0);
   }
 }
