--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.828));
+  background: linear-gradient(rgb(14, 12, 12), rgb(0, 0, 0));
   color:white;
   div {
     div {
