--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -1,19 +1,32 @@
 header {
   nav {
-    background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.828));
+    background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.928));
     div {
       a {
         img {
           max-height: 7rem;
           margin-left: 1em;
         }
+        
       }
       ul {
         li {
-          &:hover {
-            color: #f4f8fa;
-            background: #857f7f9a;
-            font-weight: bold;
+          :after {    
+            background: none repeat scroll 0 0 transparent;
+            bottom: 0;
+            content: "";
+            display: block;
+            height: 2px;
+            left: 50%;
+            position: absolute;
+            background: #fff;
+            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+            width: 0;
+            position: relative;
+          }
+          :hover:after { 
+            width: 100%; 
+            left: 0; 
           }
         }
       }
