--- a/css/style.css
+++ b/css/style.css
@@ -329,63 +329,143 @@ footer div div nav ul li {
     transform: translateX(0);
   }
 }
-.card-container {
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-.card-container figure {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  border-radius: 6px;
-  box-shadow: -1rem 0 3rem #000;
-  cursor: pointer;
-}
-.card-container figure img {
-  width: 100%;
-  height: 100%;
-  transition: all 500ms ease-out;
-}
-.card-container figure .capa {
-  position: absolute;
-  top: 0%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(black, rgba(14, 12, 12, 0.628));
-  transition: all 500ms ease-out;
-  opacity: 0;
-  visibility: hidden;
+.titulo {
   text-align: center;
-  color: white;
-}
-.card-container figure .capa h2 {
-  margin-bottom: 1rem;
-  transition: all 500ms ease-out;
-  margin-top: 2rem;
-}
-.card-container figure .capa p {
-  font-size: 1rem;
-  line-height: 1.5;
-  width: 100%;
-  max-width: 300px;
-  margin: auto;
-}
-.card-container figure:hover > .capa {
-  opacity: 1;
-  visibility: visible;
-}
-.card-container figure:hover > .capa h2 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.card-container figure:hover > img {
-  transform: scale(1.3);
+  background: linear-gradient(90deg, #fff, #000, #fff);
+  letter-spacing: 0.5rem;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: shine 4s linear infinite;
+  position: relative;
 }
 
+@keyframes shine {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
+}
+@media screen and (min-width: 426px) {
+  .card-container {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .card-container figure {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: -1rem 0 3rem #000;
+    cursor: pointer;
+  }
+  .card-container figure img {
+    width: 100%;
+    height: 100%;
+    transition: all 500ms ease-out;
+  }
+  .card-container figure .capa {
+    position: absolute;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, rgba(14, 12, 12, 0.628));
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+    color: white;
+  }
+  .card-container figure .capa h2 {
+    margin-bottom: 1rem;
+    transition: all 500ms ease-out;
+    margin-top: 2rem;
+  }
+  .card-container figure .capa p {
+    font-size: 1rem;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+  }
+  .card-container figure:hover > .capa {
+    opacity: 1;
+    visibility: visible;
+  }
+  .card-container figure:hover > .capa h2 {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+  }
+  .card-container figure:hover > img {
+    transform: scale(1.3);
+  }
+}
+@media screen and (max-width: 425px) {
+  .card-container {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .card-container figure {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: -1rem 0 3rem #000;
+    cursor: pointer;
+  }
+  .card-container figure img {
+    width: 100%;
+    height: 100%;
+    transition: all 500ms ease-out;
+  }
+  .card-container figure .capa {
+    position: absolute;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, rgba(14, 12, 12, 0.628));
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+    color: white;
+  }
+  .card-container figure .capa h2 {
+    margin-bottom: 1rem;
+    transition: all 500ms ease-out;
+    margin-top: 2rem;
+  }
+  .card-container figure .capa p {
+    font-size: 1rem;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+  }
+  .card-container figure:hover > .capa {
+    opacity: 1;
+    visibility: visible;
+  }
+  .card-container figure:hover > .capa h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .card-container figure:hover > img {
+    transform: scale(1.3);
+  }
+}
 @font-face {
   font-family: "icomoon";
   src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2");
@@ -397,7 +477,7 @@ footer div div nav ul li {
   margin: 0 0 35px;
   padding: 0;
   font-size: 0;
-  text-align: justify;
+  text-align: center;
 }
 .social-networks li {
   display: inline-block;
@@ -431,7 +511,6 @@ footer div div nav ul li {
   position: relative;
   display: block;
   font-family: "icomoon";
-  speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -519,6 +598,7 @@ footer div div nav ul li {
   padding-top: 1rem;
   padding-bottom: 1rem;
   color: white;
+  font-weight: bold;
 }
 
 h3 {
@@ -529,7 +609,7 @@ h3 {
 }
 
 h4 {
-  align-self: center;
+  text-align: center;
 }
 
 @media (min-width: 1200px) {
