--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -77,67 +77,156 @@
   }
 }
 
+//Animacion titulos
+
+.titulo {
+  text-align: center;
+  background: linear-gradient(90deg,#fff, #000, #fff);
+  letter-spacing: 0.5rem;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: shine 4s linear infinite;
+  position: relative;
+}
+
+@keyframes shine {
+  0% {
+    background-position-x: -500%;
+  }
+  100% {
+    background-position-x: 500%;
+  }
+}
+
 // Animacion productos
 
-.card-container {
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-
-  figure {
-    position: relative;
+@media screen and (min-width: 426px) {
+  .card-container {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 6px;
-    box-shadow: -1rem 0 3rem #000;
 
-    cursor: pointer;
-    img {
-      width: 100%;
+    figure {
+      position: relative;
       height: 100%;
-      transition: all 500ms ease-out;
-    }
-    .capa {
-      position: absolute;
-      top: 0%;
       width: 100%;
-      height: 100%;
-      background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.628));
-      transition: all 500ms ease-out;
-      opacity: 0;
-      visibility: hidden;
-      text-align: center;
-      color: white;
+      overflow: hidden;
+      border-radius: 6px;
+      box-shadow: -1rem 0 3rem #000;
 
-      h2 {
-        margin-bottom: 1rem;
-        transition: all 500ms ease-out;
-        margin-top: 2rem;
-      }
-      p {
-        font-size: 1rem;
-        line-height: 1.5;
+      cursor: pointer;
+      img {
         width: 100%;
-        max-width: 300px;
-        margin: auto;
+        height: 100%;
+        transition: all 500ms ease-out;
       }
-    }
-    &:hover > .capa {
-      opacity: 1;
-      visibility: visible;
-    }
-    &:hover > .capa h2 {
-      margin-top: 2rem;
-      margin-bottom: 2rem;
-    }
-    &:hover > img {
-      transform: scale(1.3);
+      .capa {
+        position: absolute;
+        top: 0%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.628));
+        transition: all 500ms ease-out;
+        opacity: 0;
+        visibility: hidden;
+        text-align: center;
+        color: white;
+
+        h2 {
+          margin-bottom: 1rem;
+          transition: all 500ms ease-out;
+          margin-top: 2rem;
+        }
+        p {
+          font-size: 1rem;
+          line-height: 1.5;
+          width: 100%;
+          max-width: 300px;
+          margin: auto;
+        }
+      }
+      &:hover > .capa {
+        opacity: 1;
+        visibility: visible;
+      }
+      &:hover > .capa h2 {
+        margin-top: 4rem;
+        margin-bottom: 2rem;
+      }
+      &:hover > img {
+        transform: scale(1.3);
+      }
     }
   }
 }
+
+@media screen and (max-width: 425px) {
+  .card-container {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    figure {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      border-radius: 6px;
+      box-shadow: -1rem 0 3rem #000;
+
+      cursor: pointer;
+      img {
+        width: 100%;
+        height: 100%;
+        transition: all 500ms ease-out;
+      }
+      .capa {
+        position: absolute;
+        top: 0%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgb(0, 0, 0), rgba(14, 12, 12, 0.628));
+        transition: all 500ms ease-out;
+        opacity: 0;
+        visibility: hidden;
+        text-align: center;
+        color: white;
+
+        h2 {
+          margin-bottom: 1rem;
+          transition: all 500ms ease-out;
+          margin-top: 2rem;
+        }
+        p {
+          font-size: 1rem;
+          line-height: 1.5;
+          width: 100%;
+          max-width: 300px;
+          margin: auto;
+        }
+      }
+      &:hover > .capa {
+        opacity: 1;
+        visibility: visible;
+      }
+      &:hover > .capa h2 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+      }
+      &:hover > img {
+        transform: scale(1.3);
+      }
+    }
+  }
+}
+
 //Animacion rrss
 
 @font-face {
@@ -159,7 +248,7 @@
   margin: 0 0 35px;
   padding: 0;
   font-size: 0;
-  text-align:justify;
+  text-align: center;
 
   li {
     display: inline-block;
@@ -195,7 +284,6 @@
       position: relative;
       display: block;
       font-family: "icomoon";
-      speak: none;
       font-style: normal;
       font-weight: normal;
       font-variant: normal;
@@ -227,7 +315,8 @@
   }
 
   $networks: facebook "\e603"rgb(143, 150, 189),
-    twitter "\e618"rgb(143, 150, 189), instagram "\e604"rgb(143, 150, 189), whatsapp "\ea93" rgb(143, 150, 189);
+    twitter "\e618"rgb(143, 150, 189), instagram "\e604"rgb(143, 150, 189),
+    whatsapp "\ea93"rgb(143, 150, 189);
 
   @each $network in $networks {
     .icon-#{nth($network, 1)} {
