--- a/scss/base/_texts.scss
+++ b/scss/base/_texts.scss
@@ -1,36 +1,35 @@
 * {
-    font-family: "Open Sans", sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 .parrafo-home {
-    @extend %parrafos-main;
-    margin-top: 8%;
-    margin-left: 40%;
-  }
+  @extend %parrafos-main;
+  margin-top: 8%;
+  margin-left: 40%;
+}
 
-  .parrafo-eventos {
-    @extend %parrafos-main;
-    margin-top: -30%;
-    margin-left: 55%;
-    margin-bottom: 5%;
-  }
+.parrafo-eventos {
+  @extend %parrafos-main;
+  margin-top: -30%;
+  margin-left: 55%;
+  margin-bottom: 5%;
+}
 
-  .titulo {
-    text-align: center;
-    font-size: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    color: white;
-  }
-  h3 {
-    text-align: center;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-    color: #010303;
-  }
-  h4{
-    align-self: center;
-  }
- 
-  
+.titulo {
+  text-align: center;
+  font-size: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: white;
+  font-weight: bold;
+}
+h3 {
+  text-align: center;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  color: #010303;
+}
+h4 {
+  text-align: center;
+}
